prevention mobile-video border-radius bottom cut-off

--- a/src/public/css/interview.css
+++ b/src/public/css/interview.css
@@ -123,7 +123,8 @@ body {
         border: none;
     }
 
-    #mobile-vid2 {
+    /* 하단부 border-radius 잘림 방지 */
+    #mobile-vid2, #mobile-vid3{
         margin-bottom: -10px;
     }
 
